syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "Grpc/Protos/Contracts/Common.proto";

option csharp_namespace = "Grpc.Contracts.Email";

message GrpcSendEmailRequest {
  GrpcSender Sender = 1;
  repeated string Recipients = 2;
  string Body = 3;
  string Subject = 4;
  repeated GrpcAttachment Attachments = 5;
}

message GrpcSendTemplatedEmailRequest {
  GrpcSender Sender = 1;
  repeated string Recipients = 2;
  string TemplateName = 3;
  string TemplateProperties = 4;
  repeated GrpcAttachment Attachments = 5;
}

message GrpcEmailResponse {
  int32 Id = 1;
  GrpcSender Sender = 2;
  repeated string Recipients = 3;
  google.protobuf.Timestamp SentDate = 4;
  GrpcEnumItem EmailStatus = 5;
}